--- a/index.html
+++ b/index.html
@@ -1,86 +1,140 @@
-
 <!DOCTYPE html> 
 <html>
 	<head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
-	<title>jQuery Mobile Docs - Page titles</title> 
-	<link rel="stylesheet"  href="../../css/themes/default/jquery.mobile-1.2.1.css" />  
-	<link rel="stylesheet" href="../_assets/css/jqm-docs.css"/>
 
-	<script src="//code.jquery.com/jquery-1.7.1.min.js"></script>
-	<script src="../../docs/_assets/js/jqm-docs.js"></script>
-	<script src="../../js/jquery.mobile-1.2.1.js"></script>
 
-</head> 
-<body> 
-
-	<div data-role="page" class="type-interior">
-
-		<div data-role="header" data-theme="f">
-		<h1>Page titles</h1>
-		<a href="../../" data-icon="home" data-iconpos="notext" data-direction="reverse">Home</a>
-		<a href="../nav.html" data-icon="search" data-iconpos="notext" data-rel="dialog" data-transition="fade">Search</a>
-	</div><!-- /header -->
-
-	<div data-role="content">
-			<div class="content-primary">	
-					
-		<h2>Titles in Ajax navigation</h2>
+		<title>Sign Up</title>
 		
-		<p>When you load the first page of a jQuery Mobile based site, then click a link or submit a form, Ajax is used to pull in the content of the requested page. Having both pages in the DOM is essential to enable the animated page transitions, but one downside of this approach is that the page title is always that of the first page, not the subsequent page you're viewing.</p>
-		<p>To remedy this, jQuery Mobile automatically parses the <code>title</code> of the page pulled via Ajax and changes the <code>title</code> attribute of the parent document to match.</p>		
 		
-		<h2>Titles in multi-page templates</h2>
+
 		
-		<p>On multi-page documents, we follow a similiar convention, but since all the pages share a common <code>title</code>, we have a <code>data-title</code> attribute that can be added to each page container within a multi-page template to manually define a title. The title of the HTML document will be automatically updated to match the <code>data-title</code> of the page currently in view.</p>
 		
-<pre><code>
-&lt;div data-role=&quot;page&quot; id=&quot;foo&quot; <strong>data-title=&quot;Page Foo&quot;</strong>&gt;
-
-&lt;/div&gt;&lt;!-- /page --&gt;
-</code></pre>
+		<style>
+		
 
 
-				</div><!--/content-primary -->		
+p{
+	font-family: Arial, Helvetica, sans-serif;
+	font-size:36px;
+	font-weight:bold;
+}
+		
+body{
+	background-color:hsla(120,65%,75%,0.3);
+}
 
-				<div class="content-secondary">
+div{
+	border:2px solid #a1a1a1;
+	padding:10px 40px; 
+	background:#ffffff;
+	width:330px;
+	border-radius:25px;
+	box-shadow: 1px 1px 2px #888888;
+}
 
-					<div data-role="collapsible" data-collapsed="true" data-theme="b" data-content-theme="d">
+.center{
+	margin-left:auto;
+	margin-right:auto;
+}
 
-							<h3>More in this section</h3>
 
-							<ul data-role="listview" data-theme="c" data-dividertheme="d">
+ul {
+    width:250px;
+    list-style-type:none;
+    list-style-position:outside;
+    margin:0px;
+    padding:0px;
+}
 
-								<li data-role="list-divider">Pages &amp; Dialogs</li>
-								<li><a href="page-anatomy.html">Anatomy of a page</a></li>
-								<li><a href="page-template.html" data-ajax="false">Single page template</a></li>
-								<li><a href="multipage-template.html" data-ajax="false">Multi-page template</a></li>
-								<li data-theme="a"><a href="page-titles.html">Page titles</a></li>
-								<li><a href="page-links.html">Linking pages</a></li>
-								<li><a href="page-transitions.html">Page transitions</a></li>
-								<li><a href="loader.html">Page loading widget</a></li>
-								<li><a href="dialog/index.html">Dialogs</a></li>
-								<li><a href="popup/index.html">Popups</a></li>
-								<li><a href="page-cache.html">Prefetching &amp; caching pages</a></li>
-								<li><a href="page-navmodel.html">Ajax, hashes &amp; history</a></li>
-								<li><a href="page-dynamic.html">Dynamically injecting pages</a></li>
-								<li><a href="page-scripting.html">Scripting pages</a></li>
-								<li><a href="phonegap.html">PhoneGap apps</a></li>
-								<li><a href="touchoverflow.html">touchOverflow feature</a></li>
-								<li><a href="pages-themes.html">Theming pages</a></li>
-							</ul>
-					</div>
-				</div>		
+li:first-child
+{
+    border-top:1px solid #777;
+}
 
-			</div><!-- /content -->
+li{
+    padding:12px;
+    border-bottom:1px solid #eee;
+    position:relative;
+	first-child, .contact_form li:last-child
+    border-bottom:1px solid #777;
 
-			<div data-role="footer" class="footer-docs" data-theme="c">
-					<p class="jqm-version"></p>
-				<p>Copyright 2010, 2013 jQuery Foundation, Inc. and other contributors</p>
-			</div>
+}
 
-			</div><!-- /page -->
+li:last-child {
+    border-bottom:1px solid #777;
+}
 
-			</body>
-			</html>
+.a {
+    width:250px;
+    margin-top: 3px;
+    display:inline-block;
+    float:left;
+    padding:3px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size:15px;
+}
+
+.b{
+    width:200px;
+    padding:5px 8px;
+	border-radius:5px;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+label{
+	font-family: Arial, Helvetica, sans-serif;
+	font-size:10px;
+	font-weight:bold;
+}
+
+button{
+	background-color:009999;
+	color:ffffff;
+}
+
+		</style>
+	</head>
+	
+	<body>
+	
+	<div class="center">
+	<p>Profile</p>
+		<form>
+		
+		
+		<ul>
+			<li>
+				<label class="a">Name</label>
+				Putri Keny Malani
+			</li>	
+
+			<li>
+				<label class="a">Birthday</label>
+				Lubuk Alung, 23 Agustus 1993 
+			</li>
+			
+			<li>
+				<label class="a">Agama</label>
+				Islam
+			</li>
+			
+			<li>
+				<label class="a">E-mail</label>
+				kenymalani@gmail.com
+			</li>
+			
+			<li>
+				<label class="a">Gender</label>	
+				Female
+			</li>
+							
+
+			
+		</ul>	
+		</form>
+	</div>
+	</body>
+	
+</html>
