--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 
 
-		<title>Sign Up</title>
+		<title>Profil</title>
 		
 		
 
@@ -100,7 +100,7 @@ button{
 	<body>
 	
 	<div class="center">
-	<p>Profile</p>
+	<p>Profil</p>
 		<form>
 		
 		
